# maxe

./: .gitignore  README.md  TradeLog.csv  imgui.ini  requirements.txt  visualize_exponential.py
TheSimulator/TheSimulator/: AdaptiveOfferingAgent.cpp  Book.cpp  Book.h  CMakeLists.txt  ExchangeAgent.cpp  ExchangeAgentMessagePayloads.h  FundamentalAgent.cpp  FundamentalAgent.h  L1LogAgent.cpp  L1LogAgent.h  MAOAgent.cpp  MAOAgent.h  MarketDataAgent.cpp  MarketDataAgent.h  Message.h  MessagePayload.h  NewsAgent.cpp  NewsAgent.h  Order.cpp  Order.h  OrderBookLogAgent.cpp  OrderBookLogAgent.h  OrderFactory.h  OrderLogAgent.cpp  OrderLogAgent.h  OrderRecord.cpp  PnLManagerAgent.cpp  PnLManagerAgent.h  PortfolioAgent.cpp  PortfolioAgent.h  PriceTimeBook.cpp  PriorityProRataBook.cpp  PureProRataBook.cpp  PythonAgent.cpp  Simulation.cpp  Simulation.h  TheSimulatorModule.cpp  Trade.cpp  Trade.h  TradeFactory.cpp  (+4 more)
agents/: DQLAgent.py  FundamentalAgent.py  MAOAgent.py  MarketMakerAgent.py  MomentumAgent.py  NewRandomAgent.py  NoiseAgent.py  PnLTracker.py  PrintingAgent.py  QLearningAgent.py  RandomAgent.py  TestingAgent.py
agents/benched/: MarketMakerAgent.py
agents/dqn/: Network.py  ReplayMemory.py  agent.py  networks.py  replay_buffer.py
doc/: BuyingAgent.py  CustomSimulation.xml  L1Log.csv  RandomAgent.py  SellerBuyerExample.xml  SimulationExample.xml  StarterAgent.py  TradeLog.csv  chart.py  ohlc.py  printLogs.py
logs/: L1Log.csv  TradeLog.csv  candles_10s.csv
results/PriceTime Base Population/10/: L1Log.csv  MarketDataLogLarge.csv  MarketDataLogSmall.csv
results/PriceTime Base Population/2/: MarketDataLog.csv  MarketDataLogLarge.csv
results/PriceTime Base Population/3/: L1Log.csv  TradeLog.csv
results/PriceTime Base Population/5/: L1Log.csv  MarketDataLogLarge.csv  MarketDataLogSmall.csv
results/PriceTime Base Population/6/: L1Log.csv  MarketDataLogLarge.csv  MarketDataLogSmall.csv  TradeLog.csv
results/PriceTime Base Population/7/: L1Log.csv  MarketDataLogLarge.csv  MarketDataLogSmall.csv  TradeLog.csv
results/PriceTime Base Population/8/: L1Log.csv  MarketDataLogLarge.csv  MarketDataLogSmall.csv
scripts/: XMLgenerator.py  candles.py  chart.py  generateSimulation.py  generate_simulation_xml.py  movingAverages.py  ohlc.py  performanceMetrics.py  performancemetrics.py  plotExplorationExploitation.py  plot_exponential.py  spread.py  stylisedFacts.py  stylisedfacts.py
simulations/: 20RandomAgents.xml  BasePopulation.xml  Big.xml  CustomSimulation.xml  Experiments.xml  GeneratedSimulation.xml  HighAdaptivePriceTime.xml  HighAdaptiveProRata.xml  HighAdaptiveWithLessRandomness.xml  LessRandomPriceTime.xml  LessRandomProRata.xml  LowAdaptive.xml  LowAdaptivePriceTime.xml  New.xml  SellerBuyerExample.xml  SimulationExample.xml  TestingAgents.xml  TheBigOne.xml
ui/: ChartPanel.py  ConfigPanel.py  MarketAnalysisPanel.py  OrderBookPanel.py  SimulationManager.py  StartUI.py  StatsPanel.py  chart_panel.py  config_panel.py  market_analysis_panel.py  orderbook_panel.py  simulation_manager.py  stats_panel.py  ui.py
(+51 files in other folders)
