# CMakeList.txt : CMake project for TheSimulator, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.15)

# Add source to this project's executable.
add_executable (TheSimulator
	"Agent.cpp"
	"Agent.h"
	"Book.cpp"
	"Book.h"
	"Decimal.cpp"
	"Decimal.h"
	"ExchangeAgent.cpp"
	"ExchangeAgent.h"
	"TheSimulatorModule.cpp"
	"ExchangeAgentMessagePayloads.h"
	"IConfigurable.h"
	"ICSVPrintable.h"
	"IHumanPrintable.h"
	"IMessageable.cpp"
	"IMessageable.h"
	"IPrintable.h"
	"L1LogAgent.cpp"
	"L1LogAgent.h"
	"main.cpp"
	"Message.h"
	"MessagePayload.h"
	"Money.cpp"
	"Money.h"
	"FundamentalAgent.cpp"
	"FundamentalAgent.h"
	"MAOAgent.cpp"
	"MAOAgent.h"
	"NewsAgent.cpp"
	"NewsAgent.h"
	"Order.cpp"
	"Order.h"
	"OrderFactory.h"
	"OrderLogAgent.cpp"
	"OrderLogAgent.h"
	"OrderBookLogAgent.cpp"
	"OrderBookLogAgent.h"
	"OrderRecord.cpp"
	"ParameterStorage.cpp"
	"ParameterStorage.h"
	"PriceTimeBook.cpp"
	"PriceTimeBook.h"
	"PriorityProRataBook.cpp"
	"PriorityProRataBook.h"
	"PureProRataBook.h"
	"PureProRataBook.cpp"
	"PythonAgent.h"
	"PythonAgent.cpp"
	"SetupAgent.cpp"
	"SetupAgent.h"
	"Simulation.cpp"
	"Simulation.h"
	"SimulationException.h"
	"split.h"
	"split.cpp"
	"TimeProRataBook.cpp"
	"TimeProRataBook.h"
	"Timestamp.h"
	"Trade.cpp"
	"Trade.h"
	"PortfolioAgent.cpp"
	"PortfolioAgent.h"
	"MarketDataAgent.cpp"
	"MarketDataAgent.h"
	"TradeFactory.cpp"
	"TradeFactory.h"
	"TradeLogAgent.cpp"
	"TradeLogAgent.h"
	"Volume.h"
)

add_subdirectory ("dimcli")
add_subdirectory ("pugi")